--- a/src/apps/gamemaster/templates/base.html
+++ b/src/apps/gamemaster/templates/base.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="{% static 'css/footer.css' %}">
     <link rel="stylesheet" href="https://cdn.lineicons.com/5.0/lineicons.css">
     <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
+    
+    <link rel="stylesheet" href="{% static '/css/inventory_files/inventory_grid.css' %}">
+    {% block extra_styles %}
+    {% endblock %}
     <title>{% block title %}EcoGo{% endblock %}</title>
 </head>
 <body>
