--- a/src/apps/trading/templates/trading/join_room.html
+++ b/src/apps/trading/templates/trading/join_room.html
@@ -26,7 +26,7 @@
     <script>
         $(document).ready(function() {
             // Fetch the list of available rooms from the server
-            $.get('/api/available_rooms/', function(data) {
+            $.get('/trading/api/available_rooms/', function(data) {
                 const rooms = data.rooms;
                 rooms.forEach(function(room) {
                     $('#roomList').append('<li><a href="/trading_room/' + room + '/">' + room + '</a></li>');
@@ -34,5 +34,6 @@
             });
         });
     </script>
+    <script src="{% static 'js/waiting_room.js' %}"></script>
 </body>
 </html>
