--- a/src/apps/trading/templates/trading/trading_room.html
+++ b/src/apps/trading/templates/trading/trading_room.html
@@ -14,6 +14,9 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
     <title>Trading Room</title>
+    <script>
+        let ws = new WebSocket("ws://127.0.0.1:8000/ws/trading/", )
+    </script>
 </head>
 <body>
     <h1>Trading Room: {{ room_name }}</h1>
