prepared trading.js for implementation

--- a/src/apps/trading/templates/trading/join_room.html
+++ b/src/apps/trading/templates/trading/join_room.html
@@ -28,7 +28,7 @@
     <script src="{% static 'js/waiting_room.js' %}"></script>
     <script>
         function join_room(room_name){
-            window.location.href = '/trading/trading_room/' + room_name + '/';
+            window.location.href = '/trading/j_trading_room/' + room_name + '/';
         }
     </script>
 </body>
