--- a/src/apps/trading/templates/trading/waiting_room.html
+++ b/src/apps/trading/templates/trading/waiting_room.html
@@ -22,7 +22,7 @@
                 return;
             }
         
-    window.location.href = '/trading/j_trading_room/' + roomName + '/';
+    window.location.href = '/trading/trading_room/' + roomName + '/';
         }
     </script>
 </head>
