--- a/src/apps/trading/templates/trading/trading_room.html
+++ b/src/apps/trading/templates/trading/trading_room.html
@@ -15,19 +15,13 @@
     <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
     <title>Trading Room</title>
     <script>
-        let ws = new WebSocket("ws://127.0.0.1:8000/ws/trading/", )
-
-        setTimeout(()=>{
-            ws.send(JSON.stringify({
-                "state_flag" : "S",
-                "body" : {},
-                "room_name" : "{{ room_name}}"
-            }))
-        }, 1000)
+        const room_name = "{{ room_name }}"
+        const user_type = "{{ user }}"
     </script>
 </head>
 <body>
     <h1>Trading Room: {{ room_name }}, User role: {{ user }}</h1>
+    <script src="{% static 'js/trading.js' %}"></script>
 </body>
 
 </html>
