Implemented javascript API to interact with the backend

--- a/src/apps/trading/templates/trading/trading_room.html
+++ b/src/apps/trading/templates/trading/trading_room.html
@@ -17,6 +17,7 @@
     <script>
         const room_name = "{{ room_name }}"
         const user_type = "{{ user }}"
+        let state = "W"
         let socket = new WebSocket("//127.0.0.1:8000/ws/trading/")
     </script>
 </head>
