--- a/src/apps/gamemaster/templates/gamemaster_dashboard.html
+++ b/src/apps/gamemaster/templates/gamemaster_dashboard.html
@@ -109,7 +109,7 @@
         </div>
 
 
-        <!-- Card Form -->
+        <!-- Card -->
         <div class="col-md-6">
        
                 <div class="card shadow-sm">
@@ -125,7 +125,7 @@
                     </div>
                 </div>
         </div>
-
+        <!-- Pack -->
         <div class="col-md-6">
             <div class="mt-3">
                 <div class="card shadow-sm">
@@ -143,7 +143,7 @@
             </div>
         </div>
 
-
+        <!-- Card Ownership -->
         <div class="col-md-6 mt-3">
             <div class="card shadow-sm">
                 <div class="card-header bg-warning text-white">
