Moved button to center

--- a/src/apps/user/templates/user/landingpage.html
+++ b/src/apps/user/templates/user/landingpage.html
@@ -75,7 +75,7 @@
             </div>
             
             {% if is_gamemaster %}
-                <div class"centered">
+                <div class="centered">
 
                     <button type="button" class="btn btn-danger btn-lg" 
                             onclick="window.location.href='{% url "gamemaster_dashboard" %}';">
