--- a/src/apps/user/templates/user/homepage.html
+++ b/src/apps/user/templates/user/homepage.html
@@ -70,8 +70,8 @@
 
                 {% if is_gamemaster %}
                     <div class="centered">
-                        <button type="button" class="btn btn-danger btn-lg" 
-                                onclick="window.location.href='{% url "gamemaster_dashboard" %}';">
+                        <button type="button" class="btn btn-success btn-lg" style="font-family: GameFont, Arial, Helvetica, sans-serif; margin-top: 20px;"  
+                        onclick="window.location.href='{% url 'gamemaster_dashboard' %}';">
                             Gamemaster Dashboard
                         </button>
                     </div>
