--- a/src/apps/user/templates/user/landingpage.html
+++ b/src/apps/user/templates/user/landingpage.html
@@ -75,13 +75,12 @@
             </div>
             
             {% if is_gamemaster %}
-                <div class="centered">
-
-                    <button type="button" class="btn btn-danger btn-lg" 
-                            onclick="window.location.href='{% url "gamemaster_dashboard" %}';">
-                        Gamemaster Dashboard
-                    </button>
-                </div>
+            <div class="centered">
+                <button type="button" class="btn btn-success btn-lg" style="font-family: GameFont, Arial, Helvetica, sans-serif; margin-top: 20px;"  
+                onclick="window.location.href='{% url 'gamemaster_dashboard' %}';">
+                    Gamemaster Dashboard
+                </button>
+            </div>
             {% endif %}
 
             <div class="w3-container w3-center w3-animate-bottom">
