--- a/src/apps/trading/templates/trading/trading_room.html
+++ b/src/apps/trading/templates/trading/trading_room.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{% static '/css/avatar.css' %}">
     <link rel="stylesheet" href="{% static '/css/centered.css' %}">
     <link rel="stylesheet" href="{% static '/css/footer.css' %}">
+    <link rel="stylesheet" href="{% static '/css/trading_files/trading_room.css' %}">
     <link rel="stylesheet" href="https://cdn.lineicons.com/5.0/lineicons.css" />
     <!-- Bootstrap -->
     <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
@@ -22,7 +23,42 @@
     </script>
 </head>
 <body>
-    <h1>Trading Room: {{ room_name }}, User role: {{ user }}</h1>
+    <div class="trading-room-container">
+        <h1 class="trading_header">
+            <div class="centered">
+                Trading Room: {{ room_name }} <br> 
+                User role: {{ user }} <br>
+            </div>
+        </h1>
+        {% if cards%}
+            <ul class="card-grid">
+                {% for card in cards %}
+                <li>
+                    <div class="card-container">
+                    <div class="card">
+                        <div class="bar bar-top">
+                            <div class="card-title">{{ card.card_name }}</div>
+                            <div class="casting-cost">{{ card.value }} {{ card.quant }}</div>
+                        </div>
+                        <div class="card-image">
+                            <img src= "{% static card.image_path %}" alt="card image">
+                        </div>
+                        <div class="bar bar-mid">
+                            <div class="card-title">Instant</div>
+                        </div>
+                        <div class="card-text">
+                                <div class="card-ability">
+                                {{card.card_desc}}
+                            </div>
+                        </div>
+                        <div class="footer">
+                            <div class="author">Created by Breadscrums.</div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
     <script src="{% static 'js/trading.js' %}"></script>
 </body>
 
