--- a/src/apps/trading/templates/trading/waiting_room.html
+++ b/src/apps/trading/templates/trading/waiting_room.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{% static '/css/avatar.css' %}">
     <link rel="stylesheet" href="{% static '/css/centered.css' %}">
     <link rel="stylesheet" href="{% static '/css/footer.css' %}">
-    <link rel="stylesheet" href="{% static '/css/waiting_room.css' %}">
+    <link rel="stylesheet" href="{% static '/css/trading_files/waiting_room.css' %}">
     <link rel="stylesheet" href="https://cdn.lineicons.com/5.0/lineicons.css" />
     <!-- Bootstrap -->
     <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
@@ -28,22 +28,23 @@
     </script>
 </head>
 <body>
-    <div class="container">
+    <div class="container text-center">
         <div class="header">
             <h1>Waiting Room</h1>
         </div>
         <div class="description">
-            <p>Enter a room name to create a new trading room or join an existing room.</p>
+            <p>Welcome to the trading room, here you may create or join a room with other users.</p>
         </div>
         <input type="text" id="roomName" class="form-control" placeholder="Enter Room Name">
-        <button type="button" class="btn btn-primary btn-lg btn-custom" onclick="redirectToTradingRoom()">Create Room</button>
         <p class="description">Click "Create Room" to start a new trading room with entered name</p>
+        <button type="button" class="btn btn-primary btn-lg btn-custom" onclick="redirectToTradingRoom()">Create Room</button>
+        <p class="description">Click "Join Room" to see a list of available rooms and join one.</p>
         <button type="button" class="btn btn-primary btn-lg btn-custom" onclick="window.location.href='{%url 'join_room' %}';">Join Room</button>
-    
-    <div id="messages"></div>
+        <div id="messages" class="mt-3"></div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{% static 'js/waiting_room.js' %}"></script>
 </body>
-</body>
+
 </html>
