--- a/src/apps/trading/templates/trading/trading_room.html
+++ b/src/apps/trading/templates/trading/trading_room.html
@@ -15,6 +15,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="{% static 'bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.min.css' %}">
     <title>Trading Room</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script>
         const room_name = "{{ room_name }}"
         const user_type = "{{ user }}"
@@ -24,13 +25,13 @@
 </head>
 <body>
     <div class="trading-room-container">
-        <h1 class="trading_header">
-            <div class="centered">
-                Trading Room: {{ room_name }} <br> 
-                User role: {{ user }} <br>
-            </div>
-        </h1>
-        {% if cards%}
+        {% if cards %}
+            <h1 class="trading_header">
+                <div class="centered">
+                    Trading Room: {{ room_name }} <br> 
+                    User role: {{ user }} <br>
+                </div>
+            </h1>
             <ul class="card-grid">
                 {% for card in cards %}
                 <li>
@@ -56,8 +57,17 @@
                         </div>
                     </div>
                 </li>
+                {% endfor %}
             </ul>
         </div>
+        {% else %}
+        <h1 class="trading_header">
+            <div class="centered">
+                Trading Room: {{ room_name }} <br> 
+                User role: {{ user }} <br>
+            </div>
+        </h1>
+        {% endif %}
     </div>
     <script src="{% static 'js/trading.js' %}"></script>
 </body>
