--- a/src/apps/trading/templates/trading/waiting_room.html
+++ b/src/apps/trading/templates/trading/waiting_room.html
@@ -41,8 +41,10 @@
         <p class="description">Click "Join Room" to see a list of available rooms and join one.</p>
         <button type="button" class="btn btn-primary btn-lg btn-custom" onclick="window.location.href='{%url 'join_room' %}';">Join Room</button>
         <div id="messages" class="mt-3"></div>
+        <p class="description">Click to return to the landing page</p>
+        <button type="button" class="btn btn-primary btn-lg btn-custom" onclick="history.back()">Go Back</button>
     </div>
-
+    
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{% static 'js/waiting_room.js' %}"></script>
 </body>
