Changed pack image

--- a/src/apps/user/templates/user/shop.html
+++ b/src/apps/user/templates/user/shop.html
@@ -70,7 +70,7 @@
                                 </div>
                             </div>
                             <div class="pack_image">
-                                <img src= "{% static pack.image_path %}" alt="pack image">
+                                <img src= "{% static pack.image %}" alt="pack image">
                             </div>
                             <div class="footer">
                                 <div class="pack_price">
