made the waiting room frontend better and user friendly

--- a/src/apps/trading/templates/trading/waiting_room.html
+++ b/src/apps/trading/templates/trading/waiting_room.html
@@ -37,12 +37,12 @@
         </div>
         <input type="text" id="roomName" class="form-control" placeholder="Enter Room Name">
         <p class="description">Click "Create Room" to start a new trading room with entered name</p>
-        <button type="button" class="btn btn-primary btn-lg btn-custom" onclick="redirectToTradingRoom()">Create Room</button>
+        <button type="button" class="btn btn-success btn-lg" style="font-family: GameFont, Arial, Helvetica, sans-serif; margin-top: 20px;" onclick="redirectToTradingRoom()">Create Room</button>
         <p class="description">Click "Join Room" to see a list of available rooms and join one.</p>
-        <button type="button" class="btn btn-primary btn-lg btn-custom" onclick="window.location.href='{%url 'join_room' %}';">Join Room</button>
+        <button type="button" class="btn btn-success btn-lg" style="font-family: GameFont, Arial, Helvetica, sans-serif; margin-top: 20px;" onclick="window.location.href='{%url 'join_room' %}';">Join Room</button>
         <div id="messages" class="mt-3"></div>
         <p class="description">Click to return to the landing page</p>
-        <button type="button" class="btn btn-primary btn-lg btn-custom" onclick="history.back()">Go Back</button>
+        <button type="button" class="btn btn-success btn-lg" style="font-family: GameFont, Arial, Helvetica, sans-serif; margin-top: 20px;" onclick="history.back()">Go Back</button>
     </div>
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
