--- a/src/ecoGo/static/css/trading_files/waiting_room.css
+++ b/src/ecoGo/static/css/trading_files/waiting_room.css
@@ -37,10 +37,13 @@ body {
     text-align: center;
     margin-bottom: 20px;
     color: white;
+    font-family: 'Gamefont', Arial, Helvetica, sans-serif;
 }
 
 .description {
     margin-top: 20px;
     font-size: 1.1em;
+    font-family: 'Gamefont', Arial, Helvetica, sans-serif;
     color: white;
 }
+
