--- a/src/apps/trading/templates/trading/join_room.html
+++ b/src/apps/trading/templates/trading/join_room.html
@@ -29,7 +29,7 @@
             {% for room in rooms %}
                 <div style= "border: 15px solid #204f2f; margin-top: 15px; margin-bottom: 15px; background-color: #a5edfc; width: 300px; height: 120px; box-shadow: 10px 5px 5px rgb(0, 0, 0);">
                     <div id="roomList">
-                        <button type="button" class="btn btn-success btn-lg"" style="font-family: GameFont, Arial, Helvetica, sans-serif; margin-top: 20px;" onclick="join_room('{{ room.0 }}')"> {{ room.0 }} </button>
+                        <button type="button" class="btn btn-success btn-lg" style="font-family: GameFont, Arial, Helvetica, sans-serif; margin-top: 20px; onclick="join_room('{{ room.0 }}')> {{ room.0 }} </button>
                     </div>
                 </div>
             {% endfor %}
