--- a/src/ecoGo/static/css/login_files/login_container.css
+++ b/src/ecoGo/static/css/login_files/login_container.css
@@ -4,7 +4,7 @@
     padding: 10px;
     border: 1px solid #28502E;
     height: 80%;
-    width: 30%;
+    width: 40%;
     border-radius: 25px;
     margin-top: 50px;
     margin-bottom: 50px; 
@@ -55,3 +55,12 @@ form div {
     height: auto;
 }
 
+@media (max-width: 500px) {
+    .login-container {
+        width: 80%;
+    }
+
+    .login-container h1{
+        font-size: 15pt;
+    }
+}
