--- a/src/apps/trading/templates/trading/trading_room.html
+++ b/src/apps/trading/templates/trading/trading_room.html
@@ -62,9 +62,7 @@
                                 <div class="card-container owner">
                                     <div class="card ">
                                         <div class="bar bar-top">
-                                            <div class="card-title">
-                                                {{ card.card_name }}
-                                            </div>
+                                            <div class="card-title">{{ card.card_name }}</div>
                                             <div class="casting-cost">
                                                 <div class="card-value">
                                                     {{ card.value }}
