--- a/src/ecoGo/static/css/trading_files/trading_room.css
+++ b/src/ecoGo/static/css/trading_files/trading_room.css
@@ -53,16 +53,6 @@ body {
     padding: var(--card-border-thickness);
 }
 
-ul:hover .card-container {
-    opacity: 0.5;
-    transition: opacity .5s ease-in-out;
-}
-
-ul:hover .card-container:hover {
-    opacity: 1;
-    transition: opacity .5s ease-in-out;
-}
-
 .bar {
     display: flex;
     justify-content: space-between;
@@ -143,4 +133,9 @@ ul:hover .card-container:hover {
 .author {
     font-weight: bold;
     font-size: 10px;
+}
+
+.selected {
+    opacity: 0.5;
+    transition: opacity .5s ease-in-out;
 }
