--- a/src/ecoGo/static/css/trading_files/join_room.css
+++ b/src/ecoGo/static/css/trading_files/join_room.css
@@ -1,84 +1,23 @@
-.centered {
-    width: 100%;
-    max-width: 600px;
-    margin-top: 30px;
+.room-container {
+    background-color: #598381;
+    min-width: 70%;
+    min-height: 500px;
     padding: 20px;
-    background-color: #ffffff00;
-    border-radius:10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    font-family: 'Gamefont', Arial, Helvetica, sans-serif;
-}
-
-.header {
-    font-family: 'Gamefont', Arial, Helvetica, sans-serif;
-    text-align: center;
-    margin-bottom: 20px;
-    color: #ffff;
-}
-
-.room-list {
-    border: 15px solid #1e7e34;
-    background-color: #5ec76d;
-    margin-top: 20px;
-    padding: 20px;
-    box-shadow: 10px 5px 5px rgb(0, 0, 0);
-    font-family: 'Gamefont', Arial, Helvetica, sans-serif;
-}
-
-.room-item {
-    border: 15px solid rgba(0, 0, 0, 0.81);
-    margin-top: 15px;
-    margin-bottom: 15px;
-    background-color: #00000000;
-    width: 100%;
-    max-width: 300px;
-    height: auto;
-    padding: 10px;
-    box-sizing: border-box;
-    font-family: 'Gamefont', Arial, Helvetica, sans-serif;
-}
-
-.btn-custom {
-    font-family: 'Gamefont', Arial, Helvetica, sans-serif;
-    background-color: #28a745;
-    border-color: #28a745;
-    margin-top: 20px;
-    width: 100%;
-    padding: 12px;
-    font-size: 1em;
     border-radius: 8px;
-}
-
-.description {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
     margin-top: 20px;
-    font-size: 1.1em;
-    font-family: 'Gamefont', Arial, Helvetica, sans-serif;
-    color: #ffff;
 }
 
-.btn-custom:hover {
-    background-color: #218838;
-    border-color: #1e7e34;
+.room-content h2 {
+    color: #fff;
+    font-size: 2rem;
+    margin-bottom: 10px;
 }
 
-@media (max-width: 768px) {
-    .centered {
-        padding: 15px;
-    }
-
-    .room-list {
-        padding: 15px;
-    }
-
-    .room-item {
-        margin-top: 10px;
-        margin-bottom: 10px;
-        padding: 8px;
-    }
-
-    .btn-custom {
-        font-size: 0.9em;
-        padding: 10px;
-    }
+.room-content p {
+    color: #fff;
+    font-size: 1.1rem;
 }
+
+
