Fixed bug with rejecting trade

--- a/src/apps/trading/templates/trading/trading_room.html
+++ b/src/apps/trading/templates/trading/trading_room.html
@@ -94,10 +94,12 @@
                     <div id="member-container">
                     </div>
                 {% else %}
-                    <div id="member-offer">
+                    <div>
                         <div id="giving-container">
                         </div>
                         <div id="receive-container">
+                        </div>
+                        <div id="member-offer">
                         </div>
                     </div>
                 {% endif %}
